--- a/mercredi/index.html
+++ b/mercredi/index.html
@@ -16,8 +16,8 @@
         <hgroup>
         <h1>La Bonne table</h1>
         <h2>Les spécialités</h2>
+        <a href="#" class="book">Réserver une table</a>
         </hgroup>
-
         <nav>
             <a href="index.html" id="logo">La Bonne Table</a>
             <!-- ul>li*5>a{item} SHORTCUT-->
@@ -49,9 +49,6 @@
         </section>
         <!-- fin first section -->
         <section>
-            <figure class="left">
-                <img src="assets/img/crowded_room.jpg" alt="Salle du restaurant">
-            </figure>
             <article>
                 <hgroup>
                 <h2>News</h2>
@@ -61,6 +58,9 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis vitae dolor provident esse necessitatibus adipisci tenetur dolore, suscipit dignissimos veniam ipsam, itaque praesentium repudiandae, velit odit laborum expedita tempore eveniet.</p>
                 <a href="#">En savoir plus</a>
             </article>
+            <figure class="left">
+                <img src="assets/img/crowded_room.jpg" alt="Salle du restaurant">
+            </figure>
         </section>
     </main>
 
